# Avsample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/avsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/avsample/: MainActivity.java  Person.java
app/src/main/res/values/: strings.xml
audio_video/: build.gradle
audio_video/src/main/: AndroidManifest.xml
audio_video/src/main/cpp/: CMakeLists.txt
audio_video/src/main/cpp/gles/: PlayCallback.cpp  PlayCallback.h  gles_play.cpp  gles_play.h  video_play.cpp  video_play.h
audio_video/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  audio_play.cpp
audio_video/src/main/res/layout/: activity_audio_play.xml  activity_test.xml  activity_video_play.xml
audio_video/src/main/res/values/: strings.xml
cmake-application/: build.gradle
cmake-application/src/main/: AndroidManifest.xml
cmake-application/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_lib.cpp
ffmpeg/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
learningvideo/: build.gradle
learningvideo/src/main/: AndroidManifest.xml
learningvideo/src/main/res/layout/: activity_main.xml  activity_multi_open_g_l_player.xml  activity_open_g_l_player.xml  activity_simple_render.xml  activity_video.xml
learningvideo/src/main/res/values/: strings.xml
(+51 files in other folders)
